# orangeOS

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
dev_document/: rCore_dev_diary_ch1-2.md  rCore_dev_diary_ch1-4.md
dev_document/ch1/: rCore_dev_diary_ch1-2.md  rCore_dev_diary_ch1-3.md
dev_document/ch2/: rCore_dev_diary_ch2-1.md
dev_document/ch3/: rCore_dev_diary_ch3-1.md  rCore_dev_diary_ch3-2.md  rCore_dev_diary_ch3-3.md
dev_document/ch4/: rCore_dev_diary_ch4-1.md  rCore_dev_diary_ch4-2.md  rCore_dev_diary_ch4-3.md  rCore_dev_diary_ch4-4.md  rCore_dev_diary_ch4-5.md
os/: Cargo.toml  Makefile
os/.cargo/: config
os/src/: batch.rs  build.rs  config.rs  console.rs  entry.asm  lang_item.rs  lang_items.rs  link_app.S  loader.rs  main.rs  sbi.rs  timer.rs
os/src/sync/: up.rs
os/src/syscall/: mod.rs  process.rs
os/src/task/: context.rs  mod.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
src/: batch.rs  console.rs  entry.asm  lang_item.rs  main.rs  sbi.rs
user/: Makefile  build.py  cargo.toml
user/.cargo/: config.toml
user/src/: Makefile  lib.rs  linker.ld  syscall.rs
