[package]
name = "orangeOS"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[profile.dev]
panic = "abort"
test = false

[profile.release]
panic = "abort"
test = false
debug = true

[source.crates-io]
replace-with = "tuna"

[source.tuna]
registry = "sparse+https://mirrors.tuna.tsinghua.edu.cn/crates.io-index/"